# ift_big_data_ops

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS
preload_db/: README.md  main.py  pyproject.toml
preload_db/modules/: __init__.py
preload_db/modules/api_abstractions/: __init__.py  get_key_stats.py  get_yh_prices.py  send_api_request.py
preload_db/modules/data_models/: __init__.py  equity_prices_yh.py  equity_stats_shares.py  rapid_api_request.py  sqlite_path.py
preload_db/modules/db_models/: __init__.py  company_statistics.py  equity_prices.py  equity_statics.py
preload_db/modules/db_ops/: get_db_sessionmaker.py  sql_lite.py
preload_db/modules/local_db/: db_connect.py
preload_db/modules/utils/: args_parser.py  local_logger.py
preload_db/properties/: conf.yaml
preload_db/tests/: test_company_stats_table.py
